chore: thiết lập lập commit tools và code formatting

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ build/
 tmp/
 temp/
 
+# Husky
+.husky/_
+
 # Frontend and Backend have their own .gitignore files
 # This root .gitignore is for project-level files only
 
