--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "html5-qrcode": "^2.3.8",
     "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
