--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0 <25.0.0",
+    "node": ">=18.0.0 <=22.0.0",
     "npm": ">=8.0.0"
   },
   "scripts": {
