--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     ]
   },
   "engines": {
-    "node": ">=18.0.0 <=22.0.0",
+    "node": ">=20.19.0 <21.0.0 || >=22.12.0",
     "npm": ">=8.0.0"
   }
 }
