--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm install @rollup/rollup-linux-x64-gnu --save-optional || true",
     "build": "vite build",
     "preview": "vite preview",
     "start": "npm run build && node start.js",
