--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,8 @@
     "@vitejs/plugin-react": "^5.1.1",
     "tailwindcss": "^3.4.18",
     "vite": "^7.2.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.53.3"
   }
 }
